﻿GNomEx Release Notes

5.2.8 
----------------------
- Treat login with 'guest' user account as a guest login, just like URL with parameter isGuest=Y
- Fixed logic for Experiment downloads and Experiment progress to work with now 'All experiments' filter.
- Fixed logic for Experiment downloads and Experiment progress to work for users not assigned to a lab.

5.2.7 (Aug 29, 2011)
----------------------
- Changes to insure billing statement doesn't get sent again if a change is inadvertently made to an item on an invoice that has already been approved and sent.
- Sample sheet upload process will now automatically create new sample rows if there are not enough to accommodate all rows of the uploaded sample sheet.
- Remove references to transfer log for experiment or analysis files that are deleted.
- Reassign lab on transfer logs when experiment or analysis lab is changed.
- Fixed bug so that the analysis drag-and-drop to a different lab works, reassigning the analysis to a different lab.

5.2.6.2 (Aug 28, 2011)
----------------------
- Fashion Analysis filters after Experiment filters (my, my labs, other labs public, all).

5.2.6.1 (Aug 26, 2011)
----------------------
- Fix FDT downloads to handle large file selection and large file names by 
  caching file names using actionscript HTTPService rather that URL.
- Fix logic for parsing zip entry name and main folder name to account
  for symbolic links for experiment and analysis directories.  Reworked logic
  to handle different forms of symbolic links that don't necessarily match part of
  the experiment directory path.

5.2.6 (Aug 25, 2011)
-----------------------
- Add "Show all" checkbox to Analysis browse, and Experiment brows for non-admins.
- Limit analysis and experiment count to 2000 entries.  Warn when results truncated.
- Fixed bug causing billing statements to be sent incorrectly
- Fixed bug causing some experiments to not show up on Experiment list on Billing tab.

5.2.5 (Aug 24, 2011)