@@ -5,6 +5,7 @@
 - Treat login with 'guest' user account as a guest login, just like URL with parameter isGuest=Y
 - Fixed logic for Experiment downloads and Experiment progress to work with now 'All experiments' filter.
 - Fixed logic for Experiment downloads and Experiment progress to work for users not assigned to a lab.
+- Show disk usage by lab, year, and category on Usage charts.
 
 5.2.7 (Aug 29, 2011)
 ----------------------
